Added a dog image & a few more elements

--- a/test.html
+++ b/test.html
@@ -1,3 +1,15 @@
-<h1>This is my header</h1>
-<p>This is my paragraph element! Yay.</p>
-<a href="https://www.google.com/" target="_blank" title="Let's go to Google!">This is my link to Google.</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test page</title>
+</head>
+<body>
+	<h1>This is my header</h1>
+	<p>This is my <b>paragraph</b> element! Yay.</p>
+	<a href="https://www.google.com/" target="_blank" title="Let's go to Google!">This is my link to Google.</a>
+	<br>
+	<p>My name is:<br>
+	Pugley!</p>
+	<img src="https://www.petmd.com/sites/default/files/Acute-Dog-Diarrhea-47066074.jpg">
+</body>
+</html>
